fix footer alignment

--- a/style.css
+++ b/style.css
@@ -15,14 +15,13 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     font-size: 1.2rem;
     text-align: center;
+    height: 100vh;
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
 }
 
 .page-container {
@@ -79,11 +78,11 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 }
 
 a {
-    color: white;
+    color: lightgray;
 }
 
 a:visited {
-    color: white;
+    color: lightgray;
 }
 
 span {
